fdo#38154: convert split win Y coord to 16bit int before xls export

Excel then won't complain about invalid xls file
(this is some fallout from increasing Calc row limit above 65k lines)

Signed-off-by: Kohei Yoshida <kyoshida@novell.com>